--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-h1 {
+h1, h2, h3 {
     text-align: center;
 }
 
@@ -42,7 +42,7 @@ a.button-list {
     font-size: 20px;
     border-radius: 6px;
     border: 2px solid #008CBA;
-    width: 100%;
+    width: auto;
     display: block;
     text-decoration: none;
     padding: 32px 16px;
@@ -57,6 +57,7 @@ a.button-list:hover {
 }
 
 div.button-list {
+    position: relative;
     background-color: #e7e7e7;
     color: black;
     font-size: 16px;
@@ -71,74 +72,24 @@ div.button-list {
     transition-duration: 0.4s;
 }
 
-.datetime select:nth-child(1){
-  width: 28%;
-  text-indent: 15px;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+
+#transactionOptions {
+    position: relative;
+    // width: 400px;
 }
 
-.datetime select:nth-child(2) {
-  width: 42%;
-  text-indent: 5px;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+#transactionTable {
+    position: absolute;
+    width: 100%;
 }
 
-.datetime select:nth-child(3) {
-  width: 28%;
-  text-indent: 15px;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+#option-list {
+    text-align: center;
+    list-style-type: none;
+    text-decoration: none;
+    line-height: 2em;
 }
 
-// ul.nav {
-//   list-style-type: none;
-//   margin: 0;
-//   padding: 0;
-//   width: 200px;
-//   background-color: #f1f1f1;
-//   height: 100%; /* Full height */
-//   position: fixed; /* Make it stick, even on scroll */
-//   overflow: auto; /* Enable scrolling if the sidenav has too much content */
-// }
-
-// li a.nav {
-//   display: block;
-//   color: #000;
-//   padding: 8px 16px;
-//   text-decoration: none;
-//   text-align: center;
-// }
-
-// /* Change the link color on hover */
-// li a.nav:hover {
-//   background-color: #555;
-//   color: white;
-// }
-
-// @media screen and (max-width: 1050px){
-//   ul.nav {
-//       width:100%;
-//       height:auto;
-//       position:relative;
-//   }
-//   ul.nav li a {
-//       float: left;
-//       padding: 15px;
-//   }
-//   div.content {margin-left:0;}
-// }
-
-// @media screen and (max-width: 400px){
-//   ul.nav li a {
-//       text-align: center;
-//       float: none;
-//   }
-// }
 
 .form {
     width: 100%;
@@ -153,14 +104,3 @@ img {
     margin: auto;
     width: 100%;
 }
-
-/* miscellaneous */
-
-// .debug_dump {
-//   clear: both;
-//   // float: left;
-//   width: 75%;
-//   margin-top: 45px;
-//   text-align: center;
-//   @include box_sizing;
-// }
