--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -11,7 +11,8 @@
       <option>Account Type</option>
       <option value="Bank" id="bank">Bank</option>
       <option value="Cash" id="cash">Cash</option>
-      <option value="Credit" id="credit">Credit Card/Loan</option>
+      <option value="Credit" id="credit">Credit Card</option>
+      <option value="Loan" id="loan">Loan</option>
       <option value="Bill" id="bill">Bill</option>
     </select>
   </div>
@@ -28,11 +29,12 @@
     <input type="text" name="account[credit_limit]" id="credit_limit" placeholder="Credit Limit" class="form-control">
   </div>
   <div class="form-group">
+    <label class="control-label sr-only" for="apr">APR:</label>
+    <input type="text" name="account[apr]" id="apr" placeholder="APR" class="form-control">
+  </div>
+  <div class="form-group">
     <label class="control-label sr-only" for="due_date">Due Date:</label>
-    <div class="input-group" id="due_date">
-      <span class="input-group-addon">Due Date: </span>
-      <input type="date" name="account[due_date]" id="due_date" class="form-control">
-    </div>
+    <input type="text" name="account[due_date]" id="due_date" placeholder="Due Date" class="form-control">
   </div>
   <div class="actions">
     <%= f.submit "Create Account", class: "btn btn-primary" %>
