--- a/app/views/accounts/cash_accounts.html.erb
+++ b/app/views/accounts/cash_accounts.html.erb
@@ -1,18 +1,15 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <h3>Cash Accounts</h3>
-      <div class="col-md-6 col-md-offset-3"><br>
-        <%= link_to 'Back to Accounts', root_path %> |
-        <%= link_to 'New Account', new_account_path %>
-        <% @cash_accounts.each do |account| %>
-          <a href="<%= account_path(account) %>" class="button-list" role="button">
-            <%= "#{account.name}" %><br>
-            <%= "#{number_to_currency(account.balance)}" %>
-          </a>
-        <% end %>
-      </div>
-    </div>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <%= render 'shared/flash_messages' %>
+  <h3>Cash Accounts</h3>
+  <div class="col-md-6 col-md-offset-3"><br>
+    <%= link_to 'Back to Accounts', root_path %> |
+    <%= link_to 'New Account', new_account_path %>
+    <% @cash_accounts.each do |account| %>
+      <a href="<%= account_path(account) %>" class="button-list" role="button">
+        <%= "#{account.name}" %><br>
+        <%= "#{number_to_currency(account.balance)}" %>
+      </a>
+    <% end %>
   </div>
 </div>
