--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -2,6 +2,7 @@
 <div class="container-fluid">
   <h1>New Account</h1>
     <div class="col-md-4 col-md-offset-4">
+      <%= render 'shared/flash_messages' %>
       <%= render 'form' %>
       <%= link_to 'Back', accounts_path %>
     </div>
