--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,32 +1,27 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <h1>Listing Categories</h1>
-      <div class="col-md-4 col-md-offset-4">
-        <p id="notice"><%= notice %></p>
-        <%= link_to 'New Category', new_category_path %>
-        <div class="button-list">
-        <table>
-          <thead>
-            <tr>
-              <th>Category Name</th>
-              <th>Totals</th>
-            </tr>
-          </thead>
-        
-          <tbody>
-            <% @categories.each do |category| %>
-              <tr>
-                <td><%= link_to "#{category.name}", category %></td>
-                <td><%= "#{number_to_currency(category.totals)}" %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-        </div>
-        <%= will_paginate @categories %>
-      </div>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <h1>Listing Categories</h1>
+  <div class="col-md-4 col-md-offset-4">
+    <%= render 'shared/flash_messages' %>
+    <%= link_to 'New Category', new_category_path %>
+    <div class="button-list">
+    <table>
+      <thead>
+        <tr>
+          <th>Category Name</th>
+          <th>Totals</th>
+        </tr>
+      </thead>
+    
+      <tbody>
+        <% @categories.each do |category| %>
+          <tr>
+            <td><%= link_to "#{category.name}", category %></td>
+            <td><%= "#{number_to_currency(category.totals)}" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
     </div>
   </div>
 </div>
