--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,11 +1,7 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <h1>New Category</h1>
-      <div class="col-md-6 col-md-offset-3">
-        <%= render 'form' %>
-      </div>
-    </div>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <h3>New Category</h3>
+  <div class="col-md-4 col-md-offset-4">
+    <%= render 'form' %>
   </div>
 </div>
