--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,29 +1,24 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <p id="notice"><%= notice %></p>
-      <div class="col-md-4 col-md-offset-4"><br><br>
-        <%= link_to 'Edit', edit_category_path(@category) %> |
-        <%= link_to 'Back', categories_path %>
-        <div class="button-list" role="button">
-          <h3><%= @category.name %> Transactions</h3><br>
-          <table class="table">
-            <% @notes.each do |transaction| %>
-              <tr>
-                <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
-                <td><%= transaction.explanation %></td>
-                <% if transaction.transaction_type == "Debit" %>
-                  <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
-                <% else %>
-                  <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
-                <% end %>
-              </tr>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <%= render 'shared/flash_messages' %>
+  <div class="col-md-4 col-md-offset-4"><br><br>
+    <%= link_to 'Edit', edit_category_path(@category) %> |
+    <%= link_to 'Back', categories_path %>
+    <div class="button-list" role="button">
+      <h3><%= @category.name %> Transactions</h3><br>
+      <table class="table">
+        <% @notes.each do |transaction| %>
+          <tr>
+            <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
+            <td><%= transaction.explanation %></td>
+            <% if transaction.transaction_type == "Debit" %>
+              <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
+            <% else %>
+              <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
             <% end %>
-          </table>
-        </div>
-        <%= will_paginate @notes %> <br>
-      </div>
+          </tr>
+        <% end %>
+      </table>
     </div>
   </div>
 </div>
