--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,74 +1,81 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <p id="notice"><%= notice %></p>
-      <h2>All Transactions</h2>
-      <div class="col-md-9 col-md-offset-2">
-        <div class="button-list">
-          <table>
-            <thead>
-              <tr>
-                <th>Transaction date</th>
-                <th>Account</th>
-                <th>Explanation</th>
-                <th>Amount</th>
-                <th>Related Account</th>
-                <th>Category</th>
-                <th colspan="1"></th>
-              </tr>
-            </thead>
-            
-            <tbody>
-              <% @notes.each do |transaction| %>
-                <tr>
-                  <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
-                  <td><%= transaction.account.name %></td>
-                  <td><%= transaction.explanation %></td>
-                  <% if transaction.transaction_type == "Debit" %>
-                    <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
-                  <% else %>
-                    <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
-                  <% end %>
-                  <% if transaction.related_account.present? %>
-                    <td><%= transaction.related_account.name %></td>
-                  <% else %>
-                    <td>None</td>
-                  <% end %>
-                  <% if transaction.category.present? %>
-                    <td><%= link_to "#{transaction.category.name}", transaction.category %></td>
-                  <% else %>
-                    <td>None</td>
-                  <% end %>
-                  <td>
-                    <div class="btn-group pull-right">
-                      <button class="btn blue btn-xs btn-outline dropdown-toggle" data-toggle="dropdown">Actions</button>
-                      <ul class="dropdown-menu pull-right">
-                        <li>
-                          <%= link_to note_path(transaction) do %>
-                              View
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to edit_note_path(transaction) do %>
-                              Edit
-                          <% end %>
-                        </li>
-                        <li>
-                          <%= link_to transaction, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                              Delete
-                          <% end %>
-                        </li>
-                      </ul>
-                    </div>
-                  </td>
-                </tr>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <%= render 'shared/flash_messages' %>
+  
+  <div class="ui-corner-all" id="transactionOptions">
+  
+    <h3> Cash Receipt</h3>
+    <div>
+      <ul>
+        <% @cash_accounts.each do |account| %>
+          <li id="option-list"><%= link_to "#{account.name}", new_account_note_path(:account_id => account.id, :transaction_type => "Debit") %></li>
+        <% end %>
+      </ul>
+    </div>
+    
+    <h3> Credit Card Receipt</h3>
+    <div>
+      <ul>
+        <% @credit_cards.each do |card| %>
+          <li id="option-list"><%= link_to "#{card.name}", new_account_note_path(:account_id => card.id, :transaction_type => "Debit") %></li>
+        <% end %>
+      </ul>
+    </div>
+    
+    <h3> Bill Payment</h3>
+    <div>
+      <ul>
+        <% @bills.each do |bill| %>
+          <li id="option-list"><%= link_to "#{bill.name}", new_account_note_path(:account_id => bill.id, :transaction_type => "Credit") %></li>
+        <% end %>
+      </ul>
+    </div>
+    
+    <h3> Bank Withdrawal</h3>
+    <div>
+      <ul>
+        <% @bank_accounts.each do |account| %>
+          <li id="option-list"><%= link_to "#{account.name}", new_account_note_path(:account_id => account.id, :transaction_type => "Debit") %></li>
+        <% end %>
+      </ul>
+    </div>
+    
+    <h3> Bank Deposit</h3>
+    <div>
+      <ul>
+        <% @bank_accounts.each do |account| %>
+          <li id="option-list"><%= link_to "#{account.name}", new_account_note_path(:account_id => account.id, :transaction_type => "Credit") %></li>
+        <% end %>
+      </ul>
+    </div>
+    
+    <h3> Recent Transactions</h3>
+    <div id="transactionTable">
+      <!--<h2>All Transactions</h2>-->
+      <table id="myTable">
+        <thead>
+          <tr>
+            <th>Transaction date</th>
+            <th>Explanation</th>
+            <th>Amount</th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <% @notes.each do |transaction| %>
+            <tr>
+              <td><%= transaction.transaction_date.strftime("%m-%d-%Y") %></td>
+              <!--<td><%= transaction.account.name %></td>-->
+              <td><%= transaction.explanation %></td>
+              <% if transaction.transaction_type == "Debit" %>
+                <td><%= link_to "- (#{number_to_currency(transaction.amount)})", transaction %></td>
+              <% else %>
+                <td><%= link_to "+ #{number_to_currency(transaction.amount)}", transaction %></td>
               <% end %>
-            </tbody>
-          </table>
-        </div>
-        <%= will_paginate @notes %>
-      </div>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
