--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -1,14 +1,3 @@
-<!--<ul class="nav">-->
-<!--  <li><a href="#"><%#= image_tag 'sunset.jpg', class: "img-circle", size: "150x120" %></a></li><br>-->
-<!--  <li><a href="/" class="nav">Accounts</a></li>-->
-<!--  <li><a href="/notes" class="nav">Transactions</a></li>-->
-<!--  <li><a href="#" class="nav">Budget</a></li>-->
-<!--  <li><a href="#" class="nav">Spending</a></li>-->
-<!--  <li><a href="/categories" class="nav">Categories</a></li>-->
-<!--  <li><a href="/logout" data-method="delete" class="nav">Logout</a></li><br>-->
-  <!--<li><a href="#"><%#= image_tag 'sky.jpg', class: "img-circle", size: "90x70" %></a></li>-->
-<!--</ul>-->
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -22,17 +11,19 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Accounts<span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown">Accounts <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Cash Accounts</a></li>
-            <li><a href="#">Bank Accounts</a></li>
-            <li><a href="#">Other</a></li>
+            <li><a href="<%= cash_accounts_path %>">Cash Accounts</a></li>
+            <li><a href="<%= bank_accounts_path %>">Bank Accounts</a></li>
+            <li><a href="<%= credit_cards_path %>">Credit Cards</a></li>
+            <li><a href="<%= loans_path %>">Loans</a></li>
+            <li><a href="<%= bills_path %>">Bills</a></li>
           </ul>
         </li>
-        <li class="active"><a href="/">Transactions</a></li>
+        <li><a href="<%= notes_path %>">Transactions</a></li>
         <li><a href="#">Budget</a></li>
         <li><a href="#">Spending</a></li>
-        <li><a href="#">Categories</a></li>
+        <li><a href="<%= categories_path %>">Categories</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
@@ -41,5 +32,3 @@
     </div>
   </div>
 </nav>
-  
-
