--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -18,10 +18,12 @@
             <li><a href="<%= credit_cards_path %>">Credit Cards</a></li>
             <li><a href="<%= loans_path %>">Loans</a></li>
             <li><a href="<%= bills_path %>">Bills</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="<%= accounts_path %>">See All Accounts</a></li>
           </ul>
         </li>
         <li><a href="<%= notes_path %>">Transactions</a></li>
-        <li><a href="#">Budget</a></li>
+        <li><a href="<%= budget_path %>">Budget</a></li>
         <li><a href="#">Spending</a></li>
         <li><a href="<%= categories_path %>">Categories</a></li>
       </ul>
