--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,10 @@ h1, h2, h3 {
     text-align: center;
 }
 
+#receipts {
+    line-height: 2.0 !important;
+}
+
 a {
     background-color: none;
     color: blue;
@@ -11,13 +15,17 @@ a {
 input[type=text] {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    // margin: 8px 0;
     box-sizing: border-box;
 }
 
 input[type=text]:focus {
     border: 3px solid #555;
 }
+
+// #input-label {
+//     width: 125px;
+// }
 
 // input[type=button], input[type=submit], input[type=reset] {
 //     background-color: #4CAF50;
@@ -90,12 +98,37 @@ div.button-list {
     line-height: 2em;
 }
 
+#budget-list {
+    position: relative;
+    list-style-type: none;
+    text-decoration: none;
+    line-height: 2em;
+    width: 150px;
+    display: inline-block;
+}
+
+#budget-rate {
+    position: absolute;
+    background-color: green;
+    width: 500px;
+    display: inline-block;
+}
+
+#category-name {
+    position: absolute;
+}
+
 
 .form {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    // margin: 8px 0;
     box-sizing: border-box;
+    margin-top: 0px;
+}
+
+.form-control {
+    margin-top: 0px;
 }
 
 img {
