--- a/app/views/accounts/credit_cards.html.erb
+++ b/app/views/accounts/credit_cards.html.erb
@@ -1,16 +1,31 @@
 <%= render partial: "pages/navigation" %>
 <div class="container-fluid">
-  <%= render 'shared/flash_messages' %>
-  <h3>Credit Cards</h3>
-  <!--<h4><%#= "Total Ratio: #{@total}" %></h4>-->
-  <div class="col-md-6 col-md-offset-3"><br>
-    <%= link_to 'Back to Accounts', root_path %> |
-    <%= link_to 'New Account', new_account_path %>
-    <% @credit_cards.each do |account| %>
-      <a href="<%= account_path(account) %>" class="button-list" role="button">
-        <%= "#{account.name}" %><br>
-        <%= "Balance: #{number_to_currency(account.balance.abs)}" %>
-      </a>
-    <% end %>
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'shared/flash_messages' %>
+    <%= link_to 'Back to Accounts', root_path %> | <%= link_to 'New Account', new_account_path %>
+    <div class="button-list">
+      <h1>Credit Cards</h1><br>
+      <table id="myTable">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Payment</th>
+            <th>Balance</th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <% @credit_cards.each do |card| %>
+            <tr>
+              <td style="text-align:center"><%= "Paid" if card.paid? %></td>
+              <td><%= link_to card.name, account_path(card) %></td>
+              <td style="text-align:right"><%= number_to_currency(card.minimum_payment.abs) %></td>
+              <td style="text-align:right"><%= number_to_currency(card.balance.abs) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
