--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,14 +1,80 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <h1>Editing Account</h1>
-      <div class="col-md-6 col-md-offset-3">
-        <%= render partial: 'update_account' %>
-        
-        <%= link_to 'Show', @account %> |
-        <%= link_to 'Back', accounts_path %>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <h1>Edit Account</h1>
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'shared/flash_messages' %>
+    <%= link_to 'Back', accounts_path %>
+    
+    <%= form_for(@account, html: {class: "form-horizontal"}) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      
+      <div class="form-group">
+        <%= f.label :name, class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+        <%= f.text_field :name, class: "form-control" %>
+        </div>
       </div>
-    </div>
+      
+      <div class="form-group">
+        <%= f.label :account_type, class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :account_type, class: "form-control", disabled: true %>
+        </div>
+      </div>
+      
+      <% unless @account.account_type == "Bill" %>
+        <div class="form-group">
+          <%= f.label :balance, class: "col-md-3 control-label" %>
+          <div class="col-md-9">
+            <%= f.text_field :balance, class: "form-control"%>
+          </div>
+        </div>
+      <% end %>
+      
+      <% unless @account.account_type == "Cash" || @account.account_type == "Bank" %>
+      <div class="form-group">
+        <%= f.label :minimum_payment, class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :minimum_payment, class: "form-control" %>
+        </div>
+      </div>
+      <% end %>
+      
+      <% if @account.account_type == "Credit" || @account.account_type == "Loan" %>
+      <div class="form-group">
+        <%= f.label :credit_limit, class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :credit_limit, class: "form-control" %>
+        </div>
+      </div>
+      <% end %>
+      
+      <% if @account.account_type == "Credit" %>
+      <div class="form-group">
+        <%= f.label :apr, class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :apr, class: "form-control" %>
+        </div>
+      </div>
+      <% end %>
+      
+      <% unless @account.account_type == "Cash" || @account.account_type == "Bank" %>
+      <div class="form-group">
+        <%= f.label :due_date, class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :due_date, class: "form-control", id: "my-date" %>
+        </div>
+      </div>
+      <% end %>
+      
+      <div class="actions">
+        <div class="col-md-3">
+          
+        </div>
+        <div class="col-md-9">
+          <%= f.submit "Update Account", class: "btn btn-primary" %>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
