--- a/app/views/accounts/loans.html.erb
+++ b/app/views/accounts/loans.html.erb
@@ -1,17 +1,31 @@
 <%= render partial: "pages/navigation" %>
 <div class="container-fluid">
-  <%= render 'shared/flash_messages' %>
-  <h3>Loans</h3>
   <div class="col-md-6 col-md-offset-3">
-    <%= link_to 'Back to Accounts', root_path %> |
-    <%= link_to 'New Account', new_account_path %>
-    <% @loans.each do |account| %>
-      <% if account.due_date.between?(Date.today.beginning_of_month, Date.today.end_of_month) && account.minimum_payment > 0 %>
-        <a href="<%= account_path(account) %>" class="button-list" role="button">
-          <%= "#{account.name}" %><br>
-          <%= "#{number_to_currency(account.minimum_payment.abs)}" %>
-        </a>
-      <% end %>
-    <% end %>
+    <%= render 'shared/flash_messages' %>
+    <%= link_to 'Back to Accounts', root_path %> | <%= link_to 'New Account', new_account_path %>
+    <div class="button-list">
+      <h1>Loans</h1><br>
+      <table id="myTable">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Payment</th>
+            <th>Balance</th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          <% @loans.each do |loan| %>
+            <tr>
+              <td style="text-align:center"><%= "Paid" if loan.paid? %></td>
+              <td><%= link_to loan.name, account_path(loan) %></td>
+              <td style="text-align:right"><%= number_to_currency(loan.minimum_payment.abs) %></td>
+              <td style="text-align:right"><%= number_to_currency(loan.balance.abs) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
