--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -6,6 +6,11 @@
     <input type="text" name="category[name]" id="category_name" placeholder="Category Name" class="form-control" autofocus="true">
   </div>
   
+  <div class="form-group">
+    <label class="control-label sr-only" for="category_budget_ammount">Category Name:</label>
+    <input type="text" name="category[budget_amount]" id="category_budget_amount" placeholder="Budget Amount" class="form-control">
+  </div>
+  
   <div class="actions">
     <%= f.submit "Create Category", class: "btn btn-primary" %>
   </div>
