--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,11 @@
 <%= render partial: "pages/navigation" %>
 <div class="container-fluid">
-  <h1>Listing Categories</h1>
-  <div class="col-md-4 col-md-offset-4">
+  <h1>Spending Categories</h1>
+  <div class="col-md-6 col-md-offset-3">
     <%= render 'shared/flash_messages' %>
     <%= link_to 'New Category', new_category_path %>
     <div class="button-list">
-    <table>
+    <table id="myTable">
       <thead>
         <tr>
           <th>Category Name</th>
