--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,55 +1,50 @@
-<div class="page-content">
-  <div class="page-content-col">
-    <div class="row">
-      <%= render partial: "pages/navigation" %>
-      <p id="notice"><%= notice %></p>
-      <div class="col-md-4 col-md-offset-4">
-        <div class="button-list" role="button">
-          <h2><%= @note.explanation %></h2><br>
-          <p>
-            <strong>Transaction type:</strong>
-            <%= @note.transaction_type %>
-          </p>
-          
-          <p>
-            <strong>Account:</strong>
-            <%= @note.account.name %>
-          </p>
-          
-          <p>
-            <strong>Amount:</strong>
-            <%= @note.amount %>
-          </p>
-          
-          <% if @note.related_account.present? %>
-            <p>
-              <strong>Related Account:</strong>
-              <%= @note.related_account.name %>
-            </p>
-          <% end %>
-          
-          <% if @note.transaction_date.present? %>
-          <p>
-            <strong>Transaction date:</strong>
-            <%= @note.transaction_date.strftime("%m-%d-%Y") %>
-          </p>
-          <% else %>
-          <p>
-            <strong>Transaction date:</strong>
-            <%= @note.created_at.strftime("%m-%d-%Y") %>
-          </p>
-          <% end %>
-          <% if @note.category.present? %>
-          <p>
-            <strong>Category:</strong>
-            <%= link_to "#{@note.category.name}", category_path(@note.category) %>
-          </p>
-          <% end %>
-        </div>
-          <%= link_to 'Edit', edit_note_path(@note) %> | 
-          <%= link_to 'Back to Account', account_path(@note.account_id) %>
-      </div>
+<%= render partial: "pages/navigation" %>
+<div class="container-fluid">
+  <div class="col-md-4 col-md-offset-4">
+    <%= render 'shared/flash_messages' %>
+    <div class="button-list" role="button">
+      <h2><%= @note.explanation %></h2><br>
+      <p>
+        <strong>Transaction type:</strong>
+        <%= @note.transaction_type %>
+      </p>
+      
+      <p>
+        <strong>Account:</strong>
+        <%= @note.account.name %>
+      </p>
+      
+      <p>
+        <strong>Amount:</strong>
+        <%= @note.amount %>
+      </p>
+      
+      <% if @note.related_account_id.present? %>
+        <p>
+          <strong>Related Account:</strong>
+          <%#= @note.related_account.name %>
+        </p>
+      <% end %>
+      
+      <% if @note.transaction_date.present? %>
+      <p>
+        <strong>Transaction date:</strong>
+        <%= @note.transaction_date.strftime("%m-%d-%Y") %>
+      </p>
+      <% else %>
+      <p>
+        <strong>Transaction date:</strong>
+        <%= @note.created_at.strftime("%m-%d-%Y") %>
+      </p>
+      <% end %>
+      <% if @note.category.present? %>
+      <p>
+        <strong>Category:</strong>
+        <%= link_to "#{@note.category.name}", category_path(@note.category) %>
+      </p>
+      <% end %>
     </div>
+      <%= link_to 'Edit', edit_note_path(@note) %> | 
+      <%= link_to 'Back to Account', account_path(@note.account_id) %>
   </div>
 </div>
-
