--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -19,13 +19,12 @@
             <li><a href="<%= loans_path %>">Loans</a></li>
             <li><a href="<%= bills_path %>">Bills</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="<%= accounts_path %>">See All Accounts</a></li>
+            <li><a href="<%= accounts_path %>">All Accounts</a></li>
           </ul>
         </li>
         <li><a href="<%= notes_path %>">Transactions</a></li>
         <li><a href="<%= budget_path %>">Budget</a></li>
-        <li><a href="#">Spending</a></li>
-        <li><a href="<%= categories_path %>">Categories</a></li>
+        <li><a href="<%= categories_path %>">Spending</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
