add summary page

--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -25,6 +25,7 @@
         <li><a href="<%= notes_path %>">Transactions</a></li>
         <li><a href="<%= budget_path %>">Budget</a></li>
         <li><a href="<%= categories_path %>">Spending</a></li>
+        <li><a href="<%= summary_path %>">Summary</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
