messing around with css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,8 +45,9 @@ input[type=text]:focus {
 }
 
 a.button-list {
-    background-color: #e7e7e7;
-    color: black;
+    // background-color: #e7e7e7;
+    background-color: #442ec1;
+    color: #d7d7ea;
     font-size: 20px;
     border-radius: 6px;
     border: 2px solid #008CBA;
