--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -95,8 +95,8 @@ body {
 }
 
 
-@media only screen and (max-width: 600px) {
-    .dashboard-container {
-        background-color: lightblue;
-    }
-}
+// @media only screen and (max-width: 600px) {
+//     .dashboard-container {
+//         background-color: lightblue;
+//     }
+// }
